@@ -15,6 +15,7 @@
  */
 package net.automatalib.automaton.mmlt;
 
+import java.util.Collections;
 import java.util.List;
 
 import net.automatalib.automaton.MutableDeterministic;
@@ -36,10 +37,10 @@ public interface MutableMMLT<S, I, T, O> extends MMLT<S, I, T, O>, MutableDeterm
     /**
      * Adds a new periodic timer to the provided location. Throws an error if
      * <ul>
-     *     <li>the outputs are empty, contain silence, or combined output symbols</li>
-     *     <li>the initial value is less zero or less</li>
-     *     <li>the initial value exceeds that of a one-shot timer (-> timer never expires)</li>
-     *     <li>the timer will time out at the same time as a one-shot timer</li>
+     *     <li>the outputs are empty, contain silence, or combined output symbols,</li>
+     *     <li>the initial value is less zero or less,</li>
+     *     <li>the initial value exceeds that of a one-shot timer (-> timer never expires),</li>
+     *     <li>the timer will time out at the same time as a one-shot timer.</li>
      * </ul>
      *
      * @param location
@@ -54,17 +55,17 @@ public interface MutableMMLT<S, I, T, O> extends MMLT<S, I, T, O>, MutableDeterm
     void addPeriodicTimer(S location, String name, long initial, List<O> outputs);
 
     default void addPeriodicTimer(S location, String name, long initial, O output){
-        addPeriodicTimer(location, name, initial, List.of(output));
+        addPeriodicTimer(location, name, initial, Collections.singletonList(output));
     }
 
     /**
      * Adds a new one-shot timer to the provided location. Removes all timers of that location with higher initial
      * value, as these can no longer time out. Throws an error if
      * <ul>
-     *     <li>the outputs are empty or contain silence, or combined output symbols</li>
-     *     <li>the initial value is less zero or less</li>
-     *     <li>the initial value exceeds that of a one-shot timer (-> timer never expires)</li>
-     *     <li>the timer will time out at the same time as a periodic timer</li>
+     *     <li>the outputs are empty or contain silence, or combined output symbols,</li>
+     *     <li>the initial value is less zero or less,</li>
+     *     <li>the initial value exceeds that of a one-shot timer (-> timer never expires),</li>
+     *     <li>the timer will time out at the same time as a periodic timer.</li>
      * </ul>
      *
      * @param location
@@ -81,7 +82,7 @@ public interface MutableMMLT<S, I, T, O> extends MMLT<S, I, T, O>, MutableDeterm
     void addOneShotTimer(S location, String name, long initial, List<O> outputs, S target);
 
     default void addOneShotTimer(S location, String name, long initial, O output, S target){
-        addOneShotTimer(location, name, initial, List.of(output), target);
+        addOneShotTimer(location, name, initial, Collections.singletonList(output), target);
     }
 
     /**
